revert internal changes, added new styling

--- a/playground/package.json
+++ b/playground/package.json
@@ -6,12 +6,10 @@
   "type": "module",
   "scripts": {
     "clean": "rm -rf ./dist .tsbuildinfo",
-    "copy-contracts": "node scripts/copy-contracts.js",
-    "serve": "yarn copy-contracts && vite",
-    "dev": "yarn copy-contracts && vite",
-    "build": "yarn copy-contracts && tsc -b && vite build",
+    "serve": "vite",
+    "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview --host 0.0.0.0 --port 3000",
+    "preview": "vite preview",
     "formatting": "run -T prettier --check ./src && run -T eslint ./src",
     "formatting:fix": "run -T eslint --fix ./src && run -T prettier -w ./src",
     "test": "npx playwright test"
@@ -20,19 +18,14 @@
   "dependencies": {
     "@aztec/accounts": "link:../yarn-project/accounts",
     "@aztec/aztec.js": "link:../yarn-project/aztec.js",
-    "@aztec/constants": "link:../yarn-project/constants",
-    "@aztec/entrypoints": "link:../yarn-project/entrypoints",
-    "@aztec/ethereum": "link:../yarn-project/ethereum",
     "@aztec/foundation": "link:../yarn-project/foundation",
     "@aztec/kv-store": "link:../yarn-project/kv-store",
-    "@aztec/noir-contracts.js": "link:../yarn-project/noir-contracts.js",
     "@aztec/pxe": "link:../yarn-project/pxe",
     "@aztec/stdlib": "link:../yarn-project/stdlib",
+    "@aztec/noir-contracts.js": "link:../yarn-project/noir-contracts.js",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@fontsource/inter": "^5.2.5",
     "@fontsource/roboto": "^5.1.1",
-    "@fontsource/space-grotesk": "^5.2.6",
     "@mui/icons-material": "^6.3.1",
     "@mui/material": "^6.3.1",
     "@mui/styles": "^6.3.1",
