--- a/.github/workflows/docs-preview.yml
+++ b/.github/workflows/docs-preview.yml
@@ -1,8 +1,14 @@
 name: Docs Preview
 
 on:
+  workflow_dispatch:
+  push:
+    branches:
+      - master
+    tags:
+      - "v*"
   pull_request:
-    types: [edited]
+    types: [opened, synchronize, reopened, ready_for_review, labeled]
 
 jobs:
   docs-preview:
