--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -2,11 +2,9 @@ name: release-please
 
 # Trigger on merges to 'master' branch
 on:
-  # push:
-  #   branches:
-  #     - master
-  pull_request:
-    types: [opened, synchronize, reopened, ready_for_review, labeled]
+  push:
+    branches:
+      - master
 
 permissions:
   contents: write
@@ -15,24 +13,26 @@ env:
   BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
 
 jobs:
-  # release-please:
-  #   name: Create Release
-  #   runs-on: ubuntu-latest
-  #   outputs:
-  #     release-pr: ${{ steps.release.outputs.pr }}
-  #   steps:
-  #     - name: Run Release Please
-  #       id: release
-  #       uses: google-github-actions/release-please-action@v3
-  #       with:
-  #         token: ${{ secrets.AZTEC_BOT_GITHUB_TOKEN }}
-  #         command: manifest
-  #         default-branch: ${{ env.BRANCH_NAME }}
+  release-please:
+    name: Create Release
+    runs-on: ubuntu-latest
+    outputs:
+      release-pr: ${{ steps.release.outputs.pr }}
+    steps:
+      - name: Run Release Please
+        id: release
+        uses: google-github-actions/release-please-action@v3
+        with:
+          token: ${{ secrets.AZTEC_BOT_GITHUB_TOKEN }}
+          command: manifest
+          default-branch: ${{ env.BRANCH_NAME }}
 
   update-docs:
     name: Update docs
-    # needs: [release-please]
-    # if: ${{ needs.release-please.outputs.release-pr }}
+    env:
+      GITHUB_TOKEN: ${{ secrets.AZTEC_BOT_GITHUB_TOKEN }}
+    needs: [release-please]
+    if: ${{ needs.release-please.outputs.release-pr }}
     runs-on: ubuntu-latest
 
     steps:
@@ -43,6 +43,11 @@ jobs:
 
       - name: Run corepack enable
         run: corepack enable
+
+      - name: Configure Git
+        run: |
+          git config --global user.name AztecBot
+          git config --global user.email tech@aztecprotocol.com
 
       - name: Generate directory hashes
         id: dir-hashes
@@ -59,7 +64,7 @@ jobs:
           path: ./noir
           key: noir-build-${{ runner.os }}-${{ steps.dir-hashes.outputs.noir_hash }}
           restore-keys: |
-            noir-build-${{ runner.os }}-
+            noir-build-${{ runner.os }}-${{ steps.dir-hashes.outputs.noir_hash }}
 
       - name: Restore Barretenberg cache
         id: cache-barretenberg
@@ -68,7 +73,7 @@ jobs:
           path: ./barretenberg
           key: barretenberg-build-${{ runner.os }}-${{ steps.dir-hashes.outputs.barretenberg_hash }}
           restore-keys: |
-            barretenberg-build-${{ runner.os }}-
+            barretenberg-build-${{ runner.os }}-${{ steps.dir-hashes.outputs.barretenberg_hash }}
 
       - name: Restore L1 contracts cache
         id: cache-l1-contracts
@@ -77,7 +82,7 @@ jobs:
           path: ./l1-contracts
           key: l1-contracts-${{ runner.os }}-${{ steps.dir-hashes.outputs.l1_contracts_hash }}
           restore-keys: |
-            l1-contracts-${{ runner.os }}-
+            l1-contracts-${{ runner.os }}-${{ steps.dir-hashes.outputs.l1_contracts_hash }}
 
       - name: Restore Yarn project cache
         id: cache-yarn-project
@@ -86,7 +91,7 @@ jobs:
           path: ./yarn-project
           key: yarn-project-${{ runner.os }}-${{ steps.dir-hashes.outputs.yarn_project_hash }}
           restore-keys: |
-            yarn-project-${{ runner.os }}-
+            yarn-project-${{ runner.os }}-${{ steps.dir-hashes.outputs.yarn_project_hash }}
 
       - name: Build dependencies
         run: |
@@ -114,11 +119,6 @@ jobs:
           yarn
           yarn build
           yarn docusaurus docs:version ${{ env.BRANCH_NAME }}
-
-      - name: Configure git
-        run: |
-          git config --global user.email "tech@aztecprotocol.com"
-          git config --global user.name "AztecBot"
 
       - name: Commit new documentation version
         run: |
