--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -68,7 +68,7 @@ jobs:
           path: ./noir
           key: noir-build-${{ runner.os }}-${{ steps.dir-hashes.outputs.noir_hash }}
           restore-keys: |
-            noir-build-${{ runner.os }}-
+            noir-build-${{ runner.os }}-${{ steps.dir-hashes.outputs.noir_hash }}
 
       - name: Restore Barretenberg cache
         id: cache-barretenberg
@@ -77,7 +77,7 @@ jobs:
           path: ./barretenberg
           key: barretenberg-build-${{ runner.os }}-${{ steps.dir-hashes.outputs.barretenberg_hash }}
           restore-keys: |
-            barretenberg-build-${{ runner.os }}-
+            barretenberg-build-${{ runner.os }}-${{ steps.dir-hashes.outputs.barretenberg_hash }}
 
       - name: Restore L1 contracts cache
         id: cache-l1-contracts
@@ -86,7 +86,7 @@ jobs:
           path: ./l1-contracts
           key: l1-contracts-${{ runner.os }}-${{ steps.dir-hashes.outputs.l1_contracts_hash }}
           restore-keys: |
-            l1-contracts-${{ runner.os }}-
+            l1-contracts-${{ runner.os }}-${{ steps.dir-hashes.outputs.l1_contracts_hash }}
 
       - name: Restore Yarn project cache
         id: cache-yarn-project
@@ -95,7 +95,7 @@ jobs:
           path: ./yarn-project
           key: yarn-project-${{ runner.os }}-${{ steps.dir-hashes.outputs.yarn_project_hash }}
           restore-keys: |
-            yarn-project-${{ runner.os }}-
+            yarn-project-${{ runner.os }}-${{ steps.dir-hashes.outputs.yarn_project_hash }}
 
       - name: Build dependencies
         run: |
