--- a/barretenberg/ts/package.json
+++ b/barretenberg/ts/package.json
@@ -24,7 +24,7 @@
     "clean": "rm -rf ./dest .tsbuildinfo .tsbuildinfo.cjs",
     "build": "yarn clean && yarn build:wasm && yarn build:esm && yarn build:cjs && yarn build:browser",
     "build:wasm": "./scripts/build_wasm.sh",
-    "build:esm": "tsc -b",
+    "build:esm": "tsc -b && chmod +x ./dest/node/main.js",
     "build:cjs": "tsc -b tsconfig.cjs.json && ./scripts/cjs_postprocess.sh",
     "build:browser": "webpack",
     "build:bindings": "cd .. && ./scripts/bindgen.sh",
