--- a/yarn-project/cli-wallet/package.json
+++ b/yarn-project/cli-wallet/package.json
@@ -73,7 +73,7 @@
     "@aztec/foundation": "workspace:^",
     "@aztec/kv-store": "workspace:^",
     "@aztec/noir-contracts.js": "workspace:^",
-    "@aztec/noir-noirc_abi": "workspace:^",
+    "@aztec/noir-noirc_abi": "portal:../../noir/packages/noirc_abi",
     "@aztec/pxe": "workspace:^",
     "@aztec/stdlib": "workspace:^",
     "@msgpack/msgpack": "^3.0.0-beta2",
