rounds of fixes, move to msgpackr throughout

--- a/yarn-project/ivc-integration/package.json
+++ b/yarn-project/ivc-integration/package.json
@@ -80,10 +80,10 @@
     "@aztec/kv-store": "workspace:^",
     "@aztec/noir-contracts.js": "workspace:^",
     "@aztec/simulator": "workspace:^",
+    "@aztec/stdlib": "workspace:^",
     "@aztec/telemetry-client": "workspace:^",
     "@aztec/world-state": "workspace:^",
     "@jest/globals": "^29.5.0",
-    "@msgpack/msgpack": "^3.0.0-beta2",
     "@playwright/test": "1.49.0",
     "@types/jest": "^29.5.0",
     "@types/node": "^22.8.1",
@@ -95,6 +95,7 @@
     "jest-mock-extended": "^4.0.0-beta1",
     "levelup": "^5.1.1",
     "memdown": "^6.1.1",
+    "msgpackr": "^1.11.2",
     "resolve-typescript-plugin": "^2.0.1",
     "serve": "^14.2.1",
     "ts-loader": "^9.5.1",
