--- a/yarn-project/end-to-end/package.json
+++ b/yarn-project/end-to-end/package.json
@@ -59,7 +59,6 @@
     "@aztec/world-state": "workspace:^",
     "@iarna/toml": "^2.2.5",
     "@jest/globals": "^29.5.0",
-    "@msgpack/msgpack": "^3.0.0-beta2",
     "@noble/curves": "^1.0.0",
     "@swc/core": "^1.4.11",
     "@swc/jest": "^0.2.36",
@@ -88,6 +87,7 @@
     "lodash.every": "^4.6.0",
     "lodash.omit": "^4.5.0",
     "memdown": "^6.1.1",
+    "msgpackr": "^1.11.2",
     "process": "^0.11.10",
     "stream-browserify": "^3.0.0",
     "string-argv": "^0.3.2",
