--- a/docs/package.json
+++ b/docs/package.json
@@ -13,6 +13,7 @@
     "preprocess": "yarn node -r dotenv/config ./src/preprocess/index.js  && node src/preprocess/generate_aztecnr_reference.js",
     "preprocess:dev": "nodemon --config nodemon.json ./src/preprocess/index.js  && nodemon --config nodemon.json src/preprocess/generate_aztecnr_reference.js",
     "preprocess:move": "sh scripts/move_processed.sh",
+    "filter-versions": "node scripts/filterVersions.js",
     "typedoc": "docusaurus generate-typedoc"
   },
   "dependencies": {
