--- a/spartan/aztec-network/values.yaml
+++ b/spartan/aztec-network/values.yaml
@@ -41,7 +41,7 @@ images:
     image: curlimages/curl:7.81.0
     pullPolicy: IfNotPresent
   foundry:
-    image: ghcr.io/foundry-rs/foundry@sha256:ce4b236f6760fdeb08e82267c9fa17647d29a374760bfe7ee01998fb8c0aaad7
+    image: ghcr.io/foundry-rs/foundry:nightly-256cc50331d8a00b86c8e1f18ca092a66e220da5
     pullPolicy: IfNotPresent
   reth:
     image: ghcr.io/paradigmxyz/reth:v1.0.8
