--- a/docs/package.json
+++ b/docs/package.json
@@ -6,16 +6,15 @@
     "docs": "yarn preprocess && yarn typedoc && docusaurus start --host ${HOST:-localhost}",
     "dev": "HOST=0.0.0.0 ENV=dev SHOW_PROTOCOL_SPECS=true yarn docs",
     "dev:local": "ENV=dev SHOW_PROTOCOL_SPECS=true yarn docs",
-    "build": "./scripts/build.sh",
+    "build": "yarn preprocess && yarn typedoc && yarn preprocess:move && docusaurus build",
     "swizzle": "docusaurus swizzle",
     "clean": "./scripts/clean.sh",
     "serve": "docusaurus serve",
     "preprocess": "yarn node -r dotenv/config ./src/preprocess/index.js  && node src/preprocess/generate_aztecnr_reference.js",
-    "preprocess:dev": "nodemon --config nodemon.json ./src/preprocess/index.js  && nodemon --config nodemon.json src/preprocess/generate_aztecnr_reference.js ",
-    "typedoc": "docusaurus generate-typedoc",
-    "rewrite": "node ./scripts/rewrite_paths.js",
-    "version::stables": "node ./scripts/setStable.js",
-    "version": "./scripts/cut_version.sh"
+    "preprocess:dev": "nodemon --config nodemon.json ./src/preprocess/index.js  && nodemon --config nodemon.json src/preprocess/generate_aztecnr_reference.js",
+    "preprocess:move": "sh scripts/move_processed.sh",
+    "filter-versions": "node scripts/filterVersions.js",
+    "typedoc": "docusaurus generate-typedoc"
   },
   "dependencies": {
     "@babel/runtime": "^7.26.0",
