fix: source is not available in sh

--- a/spartan/aztec-network/templates/boot-node.yaml
+++ b/spartan/aztec-network/templates/boot-node.yaml
@@ -52,7 +52,7 @@ spec:
             - /bin/sh
             - -c
             - |
-              source /scripts/get-validator-addresses.sh
+              . /scripts/get-validator-addresses.sh
           volumeMounts:
             - name: scripts
               mountPath: /scripts
