--- a/spartan/aztec-network/templates/transaction-bot.yaml
+++ b/spartan/aztec-network/templates/transaction-bot.yaml
@@ -70,7 +70,7 @@ spec:
             - "/bin/sh"
             - "-c"
             - |
-              source /scripts/get-private-key.sh
+              . /scripts/get-private-key.sh
           volumeMounts:
             - name: scripts
               mountPath: /scripts
