--- a/spartan/aztec-network/templates/prover-node.yaml
+++ b/spartan/aztec-network/templates/prover-node.yaml
@@ -50,7 +50,7 @@ spec:
             - "/bin/sh"
             - "-c"
             - |
-              source /scripts/get-private-key.sh
+              . /scripts/get-private-key.sh
           volumeMounts:
             - name: scripts
               mountPath: /scripts
