--- a/spartan/aztec-network/templates/validator.yaml
+++ b/spartan/aztec-network/templates/validator.yaml
@@ -53,7 +53,7 @@ spec:
             - "/bin/sh"
             - "-c"
             - |
-              source /scripts/get-private-key.sh
+              . /scripts/get-private-key.sh
           volumeMounts:
             - name: scripts
               mountPath: /scripts
