--- a/spartan/aztec-network/templates/prover-agent.yaml
+++ b/spartan/aztec-network/templates/prover-agent.yaml
@@ -201,7 +201,7 @@ spec:
   dataSource:
     kind: PersistentVolumeClaim
     name: {{ include "aztec-network.fullname" . }}-shared-crs-pvc
-  storageClassName: standard-rwo
+  storageClassName: premium-rwo
   resources:
     requests:
       storage: 3Gi
