--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -18,6 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       release-pr: ${{ steps.release.outputs.pr }}
+      release-version: ${{ steps.release.outputs.tag_name }}
     steps:
       - name: Run Release Please
         id: release
@@ -62,7 +63,7 @@ jobs:
           echo "[]" > versions.json
           yarn
           yarn build
-          yarn docusaurus docs:version ${{ env.BRANCH_NAME }}
+          yarn docusaurus docs:version ${{ needs.release-please.outputs.release-version }}
 
       - name: Filter
         working-directory: ./docs
@@ -72,5 +73,5 @@ jobs:
       - name: Commit new documentation version
         run: |
           git add .
-          git commit -m "chore(docs): cut new docs version for tag ${{ env.BRANCH_NAME }}"
+          git commit -m "chore(docs): cut new docs version for tag ${{ needs.release-please.outputs.release-version }}
           git push
