--- a/yarn-project/archiver/package.json
+++ b/yarn-project/archiver/package.json
@@ -80,8 +80,7 @@
     "lodash.omit": "^4.5.0",
     "tsc-watch": "^6.0.0",
     "tslib": "^2.5.0",
-    "viem": "2.23.7",
-    "ws": "^8.13.0"
+    "viem": "2.23.7"
   },
   "devDependencies": {
     "@jest/globals": "^29.5.0",
@@ -90,7 +89,6 @@
     "@types/lodash.groupby": "^4.6.9",
     "@types/lodash.omit": "^4.5.7",
     "@types/node": "^18.15.11",
-    "@types/ws": "^8.5.4",
     "concurrently": "^8.0.1",
     "jest": "^29.5.0",
     "jest-mock-extended": "^3.0.4",
