--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -18,7 +18,6 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       release-pr: ${{ steps.release.outputs.pr }}
-      release-version: ${{ steps.release.outputs.tag_name }}
     steps:
       - name: Run Release Please
         id: release
@@ -27,6 +26,7 @@ jobs:
           token: ${{ secrets.AZTEC_BOT_GITHUB_TOKEN }}
           command: manifest
           default-branch: ${{ env.BRANCH_NAME }}
+          release-type: node
 
   update-docs:
     name: Update docs
@@ -57,13 +57,24 @@ jobs:
             $project/bootstrap.sh
           done
 
+      - name: Query new version
+        id: version
+        run: |
+          # Extract version from .release-please-manifest.json
+          AZTEC_VERSION=$(jq -r '."."' .release-please-manifest.json)
+
+          # Add v prefix
+          AZTEC_VERSION="v$AZTEC_VERSION"
+
+          echo "semver=$AZTEC_VERSION" >> $GITHUB_OUTPUT
+
       - name: Cut version
         working-directory: ./docs
         run: |
           echo "[]" > versions.json
           yarn
           yarn build
-          yarn docusaurus docs:version ${{ needs.release-please.outputs.release-version }}
+          yarn docusaurus docs:version ${{ steps.version.outputs.semver }}
 
       - name: Filter
         working-directory: ./docs
@@ -73,5 +84,5 @@ jobs:
       - name: Commit new documentation version
         run: |
           git add .
-          git commit -m "chore(docs): cut new docs version for tag ${{ needs.release-please.outputs.release-version }}
+          git commit -m "chore(docs): cut new docs version for tag ${{ steps.version.outputs.semver }}"
           git push
