clean up prover node config

--- a/spartan/aztec-network/templates/validator.yaml
+++ b/spartan/aztec-network/templates/validator.yaml
@@ -78,6 +78,8 @@ spec:
             timeoutSeconds: 30
             failureThreshold: 3
           volumeMounts:
+            - name: scripts
+              mountPath: /scripts
             - name: contracts-env
               mountPath: /shared/contracts
             - name: config
