--- a/spartan/aztec-network/templates/prover-node.yaml
+++ b/spartan/aztec-network/templates/prover-node.yaml
@@ -70,28 +70,6 @@ spec:
             - name: config
               mountPath: /shared/config
 
-        - name: configure-prover-env
-          {{- include "aztec-network.image" . | nindent 10 }}
-          command:
-            - "/bin/bash"
-            - "-c"
-            - "source /shared/config/service-addresses && \
-               /scripts/configure-prover-env.sh ${BOOT_NODE_HOST}"
-          volumeMounts:
-            - name: contracts-env
-              mountPath: /shared/contracts
-            - name: scripts
-              mountPath: /scripts
-            - name: config
-              mountPath: /shared/config
-          env:
-            - name: P2P_ENABLED
-              value: "{{ .Values.proverNode.p2p.enabled }}"
-            - name: BOOTSTRAP_NODES
-              value: "{{ .Values.aztec.bootstrapENRs }}"
-            - name: REGISTRY_CONTRACT_ADDRESS
-              value: "{{ .Values.aztec.contracts.registryAddress }}"
-
       containers:
         - name: prover-node
           {{- include "aztec-network.image" . | nindent 10 }}
@@ -99,21 +77,30 @@ spec:
             - /bin/bash
             - -c
             - |
+              source /shared/config/service-addresses && \
+              source /scripts/configure-prover-env.sh ${BOOT_NODE_HOST} && \
               source /scripts/get-private-key.sh && \
               source /shared/contracts/contracts.env && \
               source /shared/config/p2p-addresses && \
-              source /shared/config/service-addresses && \
               source /shared/config/otel-resource && \
               env && \
               node --no-warnings /usr/src/yarn-project/aztec/dest/bin/index.js start --prover-node --archiver
           volumeMounts:
             - name: contracts-env
               mountPath: /shared/contracts
+            - name: scripts
+              mountPath: /scripts
             - name: config
               mountPath: /shared/config
             - name: prover-node-data
               mountPath: {{ .Values.proverNode.dataDir }}
           env:
+            - name: P2P_ENABLED
+              value: "{{ .Values.proverNode.p2p.enabled }}"
+            - name: BOOTSTRAP_NODES
+              value: "{{ .Values.aztec.bootstrapENRs }}"
+            - name: REGISTRY_CONTRACT_ADDRESS
+              value: "{{ .Values.aztec.contracts.registryAddress }}"
             - name: KEY_INDEX_START
               value: {{ .Values.aztec.proverKeyIndexStart | quote }}
             - name: MNEMONIC
