chore(docs): docs versioning nits - round 4 (#13472)
Not technically a nit, but it makes the docs version have the correct
expansion for `#include_aztec_version` macros

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -71,10 +71,11 @@ jobs:
       - name: Cut version
         working-directory: ./docs
         run: |
+          COMMIT_TAG=$({{ steps.version.outputs.semver }})
           echo "[]" > versions.json
           yarn
-          yarn build
-          yarn docusaurus docs:version ${{ steps.version.outputs.semver }}
+          COMMIT_TAG=$COMMIT_TAG yarn build
+          COMMIT_TAG=$COMMIT_TAG yarn docusaurus docs:version ${{ steps.version.outputs.semver }}
 
       - name: Filter
         working-directory: ./docs
