--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -70,7 +70,7 @@ jobs:
       - name: Cut version
         working-directory: ./docs
         run: |
-          COMMIT_TAG=$({{ steps.version.outputs.semver }})
+          COMMIT_TAG=${{ steps.version.outputs.semver }}
           echo "[]" > versions.json
           yarn
           COMMIT_TAG=$COMMIT_TAG yarn build
