--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -37,10 +37,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout master branch
+      - name: Checkout release branch
         uses: actions/checkout@v4
         with:
-          ref: master
+          ref: ${{ fromJSON(needs.release-please.outputs.release-pr).headBranchName }}
+          token: ${{ secrets.AZTEC_BOT_GITHUB_TOKEN }}
 
       - name: Run corepack enable
         run: corepack enable
@@ -70,7 +71,7 @@ jobs:
       - name: Cut version
         working-directory: ./docs
         run: |
-          COMMIT_TAG=$({{ steps.version.outputs.semver }})
+          COMMIT_TAG=${{ steps.version.outputs.semver }}
           echo "[]" > versions.json
           yarn
           COMMIT_TAG=$COMMIT_TAG yarn build
