doesn't need to take an input

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -80,7 +80,7 @@ jobs:
       - name: Update versions.json with new version
         working-directory: ./docs/scripts
         run: |
-          ./update_version.sh "${{ steps.version.outputs.semver }}"
+          ./update_versions.sh
 
       - name: Commit new documentation version
         run: |
