Blob sink server fetches from L1 consensus on blob miss

--- a/yarn-project/blob-sink/package.json
+++ b/yarn-project/blob-sink/package.json
@@ -8,7 +8,8 @@
   "exports": {
     "./server": "./dest/server/index.js",
     "./client": "./dest/client/index.js",
-    "./encoding": "./dest/encoding/index.js"
+    "./encoding": "./dest/encoding/index.js",
+    "./types": "./dest/types/index.js"
   },
   "inherits": [
     "../package.common.json"
