--- a/.test_patterns.yml
+++ b/.test_patterns.yml
@@ -80,6 +80,10 @@ tests:
     owners:
       - *sean
   - regex: "simple e2e_p2p/reex"
+    error_regex: "Nonce provided for the transaction is lower than the current nonce of the account"
+    owners:
+      - *palla
+  - regex: "simple e2e_p2p/reex"
     error_regex: "Received promise resolved instead of rejected"
     owners:
       - *sean
