--- a/.github/workflows/docs-deploy.yml
+++ b/.github/workflows/docs-deploy.yml
@@ -55,3 +55,13 @@ jobs:
             echo "$deploy_output"
             exit 1
           fi
+
+      - name: Reindex with Typesense docsearch-scraper
+        run: |
+          docker run \
+            -e "TYPESENSE_API_KEY=${{ secrets.TYPESENSE_API_KEY }}" \
+            -e "TYPESENSE_HOST=${{ secrets.TYPESENSE_HOST }}" \
+            -e "TYPESENSE_PORT=443" \
+            -e "TYPESENSE_PROTOCOL=https" \
+            -e "CONFIG=$(cat docs/typesense.config.json | jq -r tostring)" \
+            typesense/docsearch-scraper:0.11.0
