--- a/noir-projects/noir-protocol-circuits/crates/blob/Nargo.toml
+++ b/noir-projects/noir-protocol-circuits/crates/blob/Nargo.toml
@@ -5,5 +5,6 @@ authors = [""]
 compiler_version = ">=0.30.0"
 
 [dependencies]
-bigint = { tag = "v0.6.0", git = "https://github.com/noir-lang/noir-bignum" }
+bigint = { tag = "v0.6.1", git = "https://github.com/noir-lang/noir-bignum" }
+bigcurve = { tag = "mw/bump", git = "https://github.com/noir-lang/noir_bigcurve" }
 types = { path = "../types" }
