--- a/yarn-project/blob-lib/package.json
+++ b/yarn-project/blob-lib/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@aztec/constants": "workspace:^",
     "@aztec/foundation": "workspace:^",
+    "@noble/curves": "1.8.1",
     "c-kzg": "4.0.0-alpha.1",
     "tslib": "^2.4.0"
   },
