feat: expose mempool limit through helm chart

--- a/spartan/aztec-network/templates/prover-node.yaml
+++ b/spartan/aztec-network/templates/prover-node.yaml
@@ -160,6 +160,8 @@ spec:
               value: {{ .Values.proverNode.l1GasPriceMax | quote }}
             - name: P2P_ENABLED
               value: "{{ .Values.proverNode.p2p.enabled }}"
+            - name: P2P_MAX_TX_POOL_SIZE
+              value: "{{ .Values.network.mempoolLimitBytes }}"
             - name: P2P_GOSSIPSUB_FLOOD_PUBLISH
               value: "{{ .Values.proverNode.p2p.floodPublish }}"
             - name: P2P_PORT
