--- a/spartan/aztec-network/values.yaml
+++ b/spartan/aztec-network/values.yaml
@@ -17,6 +17,8 @@ network:
   # If true then configured bootnodes are considered non-gossiping peers
   p2pBootstrapNodesAsFullPeers: true
 
+  mempoolLimitBytes: 100000000 # approx 100MB
+
 storage:
   localSsd: false
   dataStoreMapSize: "134217728" # 128 GB
