revert update-docs condition in release-please

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -33,6 +33,7 @@ jobs:
     env:
       GITHUB_TOKEN: ${{ secrets.AZTEC_BOT_GITHUB_TOKEN }}
     needs: [release-please]
+    if: ${{ needs.release-please.outputs.release-pr }}
     runs-on: ubuntu-latest
 
     steps:
