--- a/barretenberg/ts/package.json
+++ b/barretenberg/ts/package.json
@@ -88,6 +88,7 @@
     "html-webpack-plugin": "^5.5.1",
     "idb-keyval": "^6.2.1",
     "jest": "^29.5.0",
+    "msgpackr": "^1.11.2",
     "prettier": "^2.8.4",
     "resolve-typescript-plugin": "^2.0.1",
     "source-map-support": "^0.5.21",
