--- a/.github/workflows/docs-deploy.yml
+++ b/.github/workflows/docs-deploy.yml
@@ -44,17 +44,8 @@ jobs:
 
       # Making the bash script here so we don't accidentally deploy
       - name: Deploy docs
-        working-directory: ./docs
         run: |
-          echo "deploying docs to prod"
-          yarn install
-          yarn build
-
-          if ! deploy_output=$(yarn netlify deploy --site aztec-docs-dev --prod 2>&1); then
-            echo "Netlify deploy failed with error:"
-            echo "$deploy_output"
-            exit 1
-          fi
+          ./docs/bootstrap.sh release
 
       - name: Reindex with Typesense docsearch-scraper
         run: |
