--- a/boxes/docker-compose.yml
+++ b/boxes/docker-compose.yml
@@ -34,7 +34,7 @@ services:
     depends_on:
       - ethereum
 
-  boxes:
+  box:
     image: aztecprotocol/build:3.0
     cpus: 4
     cpuset: ${CPU_LIST:-}
